test/classes/dinan/circular_init_broken.good
circular_init_broken.chpl:2: error: 'b' used before defined (first used here)
